<resources>

    <!-- SALARIES LIST ACTIVITY -->
    <string name="app_name">SalariesTrack</string>
    <string name="payment_date">Payment date:</string>

    <string name="sort_selection_title">Sort Salaries By</string>
    <string name="not_paid_salaries">Not Paid Salaries</string>
    <string name="no_contract_salaries">No Contract Salaries</string>
    <string name="no_receipt_salaries">No Receipt Salaries</string>
    <string name="all_salaries">All Salaries</string>

    <string-array name="sort_selection_options">
        <item>@string/not_paid_salaries</item>
        <item>@string/no_contract_salaries</item>
        <item>@string/no_receipt_salaries</item>
        <item>@string/all_salaries</item>
    </string-array>

    <!-- SALARY ACTIVITY -->
    <string name="update_salary_title">Update Salary</string>
    <string name="new_salary_title">New Salary</string>
    <string name="worker_name_hint">Worker name</string>
    <string name="salary_hint">Salary</string>
    <string name="work_date_hint">Work date (Optional)</string>
    <string name="payment_date_hint">Payment date</string>
    <string name="work_place_hint">Work place (Optional)</string>
    <string name="work_description_hint">Work description (Optional)</string>
    <string name="salary_saved">New salary saved!</string>
    <string name="salary_updated">Salary updated!</string>
    <string name="salary_deleted">Salary Deleted!</string>
    // CHECK BOXES
    <string name="no_receipt_cb">No Receipt</string>
    <string name="not_paid_cb">Salary Not Paid</string>
    <string name="no_contract_cb">No Contract</string>
    <string name="salary_paid_cb">Salary Paid</string>
    <string name="contract_approved_cb">Contract Approved</string>
    <string name="receipt_cb">Receipt Approved</string>
    // DELETE SALARY DIALOG
    <string name="delete_salary_title">Delete Salary?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>

    <!-- WIDGET -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="title">Salaries to pay this month:</string>
    <string name="missing_value_error">missing value</string>
    <string name="must_fill_marked_fields_error">* Must fill marked fields</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="sort">Sort</string>
    <string name="debug_print">Debug Print</string>
    <string name="no_salaries_to_display">No salaries to display…</string>
    <string name="salary_information_title">Salary Information</string>
    <string name="work_information_title">Work Information</string>
    <string name="new_salary_menu_item">New Salary</string>
    <string name="widget_add_new_salary_image_view_button_content_description">widget add new salary image view button</string>


</resources>
