<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.salary.SalaryActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_input_horizontal_margin"
            android:layout_marginStart="@dimen/text_input_horizontal_margin"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/worker_name_hint"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salary_hint"
                android:inputType="number"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/divider4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_work_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_date_hint"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_payment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_date_hint"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_work_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_place_hint"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_vertical_margin"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/iet_work_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_description_hint"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/error_iv_margin"
            app:srcCompat="@drawable/ic_must_fill_red_24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            android:contentDescription="@string/missing_value_error" />

        <ImageView
            android:id="@+id/iv_salary_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/error_iv_margin"
            app:srcCompat="@drawable/ic_must_fill_red_24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
            android:contentDescription="@string/missing_value_error" />

        <ImageView
            android:id="@+id/iv_payment_date_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/error_iv_margin"
            app:srcCompat="@drawable/ic_must_fill_red_24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout7"
            android:contentDescription="@string/missing_value_error"/>

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_half_margin"
            android:text="@string/must_fill_marked_fields_error"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_half_margin"
            android:layout_marginStart="@dimen/default_half_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/salary_information_title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_half_margin"
            android:layout_marginStart="@dimen/default_half_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/work_information_title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height_normal"
            android:layout_marginTop="@dimen/divider_top_margin"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height_normal"
            android:layout_marginTop="@dimen/divider_top_margin"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/cb_pay"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_half_margin"
            android:text="@string/not_paid_cb"
            app:layout_constraintStart_toStartOf="@+id/tv_error_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />

        <CheckBox
            android:id="@+id/cb_contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_half_margin"
            android:layout_marginTop="@dimen/default_half_margin"
            android:text="@string/no_contract_cb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cb_pay"
            app:layout_constraintTop_toBottomOf="@+id/cb_pay" />

        <CheckBox
            android:id="@+id/cb_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/no_receipt_cb"
            app:layout_constraintStart_toEndOf="@+id/cb_pay"
            app:layout_constraintTop_toTopOf="@+id/cb_pay" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>